crates/wamex-cli/tests/snapshots/snapshot__async_string.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "4153594e4320535452494e47000000004e0a1000190000001e00000005000000deadbeef0200000001000000deadbeef",
    "",
    "",
]
