crates/wamex-cli/tests/snapshots/snapshot__dep_dyn.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "930000005400000004000000080000009300000054000000040000005800000008000000deadbeef590000005a0000005b0000005c0000005d00000000000000620000000c0000000400000063000000640000006500000000000000000000000100000066000000620000000c0000000400000009000000620000000c0000000400000068000000620000000c000000040000006900000068000000deadbeef6a0000006b0000005b0000006a0000005d000000000000000400000004000000490000006c0000000c00000004000000030000000000000004000000040000006d000000deadbeef0001000004000000deadbeef",
    "",
    "",
]
