crates/wamex-cli/tests/snapshots/snapshot__dep_dyn.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__indirect_function_table",
    "__lib_base",
    "__stack_pointer",
    "__table_base",
    "__wamex__RNvCs3a3n7XucIXy_7___rustc14___rust_dealloc",
    "__wamex__ZN10wamex_link10js_helpers12copy_imports17h6f522ab4b9be86feE",
    "__wamex__ZN10wamex_link11deserialize13parse_version17hf8ce4b381850a076E",
    "__wamex__ZN10wamex_link11deserialize14buffer_to_rust17hbf8982e5db68d855E",
    "__wamex__ZN10wamex_link11deserialize20deserialize_metadata17h11bd074f3ab4c4cdE",
    "__wamex__ZN10wamex_link12LinkageState6global17h6ed73d637f262227E",
    "__wamex__ZN10wamex_link12LinkageState6global17hc6207d11fabe2b10E",
    "__wamex__ZN10wamex_link12LinkageState6global17hc745848a29eabf47E",
    "__wamex__ZN10wamex_link12LinkageState6global17hfcf5dd1359812f90E",
    "__wamex__ZN10wamex_link8ModuleId3new17ha1ad30746eb960f6E",
    "__wamex__ZN10wamex_link8ModuleId9build_url17haab9dfc6ab979fb4E",
    "__wamex__ZN12wasm_bindgen4__rt8wbg_cast17breaks_if_inlined17haa9729e778bb4febE",
    "__wamex__ZN12wasm_bindgen4__rt8wbg_cast17breaks_if_inlined17hed65296ad41b2574E",
    "__wamex__ZN254_$LT$alloc..boxed..convert..$LT$impl$u20$core..convert..From$LT$alloc..string..String$GT$$u20$for$u20$alloc..boxed..Box$LT$dyn$u20$core..error..Error$u2b$core..marker..Sync$u2b$core..marker..Send$GT$$GT$..from..StringError$u20$as$u20$core..fmt..Debug$GT$3fmt17hb3e8a33e5eea1e1cE",
    "__wamex__ZN256_$LT$alloc..boxed..convert..$LT$impl$u20$core..convert..From$LT$alloc..string..String$GT$$u20$for$u20$alloc..boxed..Box$LT$dyn$u20$core..error..Error$u2b$core..marker..Sync$u2b$core..marker..Send$GT$$GT$..from..StringError$u20$as$u20$core..fmt..Display$GT$3fmt17h1665516f5f7971c0E",
    "__wamex__ZN3log13__private_api3log17h1ebc0da2d0843837E",
    "__wamex__ZN42_$LT$$RF$T$u20$as$u20$core..fmt..Debug$GT$3fmt17h37f92c60587494afE",
    "__wamex__ZN4core3fmt3num3imp52_$LT$impl$u20$core..fmt..Display$u20$for$u20$u32$GT$3fmt17h52f0cbdbc83f76f3E",
    "__wamex__ZN4core3fmt3num50_$LT$impl$u20$core..fmt..Debug$u20$for$u20$u32$GT$3fmt17h00a4b416a9111792E",
    "__wamex__ZN4core3fmt5Write9write_fmt17hde2228fa5c67f989E",
    "__wamex__ZN4core3fmt9Formatter26debug_struct_fields_finish17he9a90b46c39b319fE",
    "__wamex__ZN4core3ptr238drop_in_place$LT$alloc..boxed..convert..$LT$impl$u20$core..convert..From$LT$alloc..string..String$GT$$u20$for$u20$alloc..boxed..Box$LT$dyn$u20$core..error..Error$u2b$core..marker..Sync$u2b$core..marker..Send$GT$$GT$..from..StringError$GT$17ha3e5a940f5d0bdd7E",
    "__wamex__ZN4core3ptr38drop_in_place$LT$wamex_link..Error$GT$17h02daeb3e99362343E.270",
    "__wamex__ZN4core3ptr60drop_in_place$LT$wamex_metadata..dylink0..Dylink0Section$GT$17h0d3b938328eb5e2bE",
    "__wamex__ZN4core3ptr72drop_in_place$LT$wamex_link..load_inner..$u7b$$u7b$closure$u7d$$u7d$$GT$17hc5fb289af4073a06E.264",
    "__wamex__ZN4core3ptr73drop_in_place$LT$alloc..vec..Vec$LT$alloc..borrow..Cow$LT$str$GT$$GT$$GT$17h55601df1c267cc97E",
    "__wamex__ZN4core3ptr74drop_in_place$LT$wamex_link..fetch_buffer..$u7b$$u7b$closure$u7d$$u7d$$GT$17h55d2c5ba2120249eE",
    "__wamex__ZN4core5error5Error11description17h17fc6f37f7854e46E",
    "__wamex__ZN4core5error5Error5cause17h4f798c905ce05445E",
    "__wamex__ZN4core5error5Error5cause17hcc680381800f74f7E",
    "__wamex__ZN4core5error5Error7provide17h19a0a1ae8c5b7242E",
    "__wamex__ZN4core5error5Error7type_id17h17c75e5272407267E",
    "__wamex__ZN4core5error5Error7type_id17h73c4f9d217a261aaE",
    "__wamex__ZN4core6option13expect_failed17hf7d4cb9cdecdc25fE",
    "__wamex__ZN4core6option13unwrap_failed17h9ca0a02654714ca8E",
    "__wamex__ZN4core6result13unwrap_failed17hfc8901a33c6d9bcbE",
    "__wamex__ZN4core9panicking11panic_const28panic_const_async_fn_resumed17hcdc7963235d4e518E",
    "__wamex__ZN51_$LT$js_sys..Object$u20$as$u20$core..fmt..Debug$GT$3fmt17h5aa3cd18a85d5f05E",
    "__wamex__ZN53_$LT$core..fmt..Error$u20$as$u20$core..fmt..Debug$GT$3fmt17hf55c44ad27aff468E",
    "__wamex__ZN54_$LT$wamex_link..Error$u20$as$u20$core..fmt..Debug$GT$3fmt17h2698eae075ce34edE",
    "__wamex__ZN56_$LT$wamex_link..Error$u20$as$u20$core..error..Error$GT$6source17h7e197552fb7329eaE",
    "__wamex__ZN56_$LT$wamex_link..Error$u20$as$u20$core..fmt..Display$GT$3fmt17h12e67f2b1fe73548E",
    "__wamex__ZN57_$LT$wamex_link..ModuleId$u20$as$u20$core..fmt..Debug$GT$3fmt17hcfd969c84baafbc7E",
    "__wamex__ZN58_$LT$alloc..string..String$u20$as$u20$core..fmt..Debug$GT$3fmt17h993cbc849f41876eE",
    "__wamex__ZN58_$LT$alloc..string..String$u20$as$u20$core..fmt..Write$GT$10write_char17h9be285c8d1dbe801E",
    "__wamex__ZN58_$LT$alloc..string..String$u20$as$u20$core..fmt..Write$GT$9write_str17h29bf60e6a1da2760E",
    "__wamex__ZN5alloc2rc15Rc$LT$T$C$A$GT$9drop_slow17h592d33e4db92507cE",
    "__wamex__ZN5alloc7raw_vec12handle_error17h3d3f256ad1600b52E",
    "__wamex__ZN5alloc7raw_vec20RawVecInner$LT$A$GT$10deallocate17h3013ed22802dc9d2E",
    "__wamex__ZN60_$LT$alloc..string..String$u20$as$u20$core..clone..Clone$GT$5clone17h3fb29de4deab7befE",
    "__wamex__ZN64_$LT$wamex_metadata..BumpVersion$u20$as$u20$core..fmt..Debug$GT$3fmt17hb6cfbaef06dcf1f5E",
    "__wamex__ZN65_$LT$alloc..vec..Vec$LT$T$C$A$GT$$u20$as$u20$core..fmt..Debug$GT$3fmt17h9155007153203b72E",
    "__wamex__ZN67_$LT$wamex_link..InstantiatedModule$u20$as$u20$core..fmt..Debug$GT$3fmt17h383c63341dc06e51E",
    "__wamex__ZN6js_sys11WebAssembly18instantiate_module34__wbg_instantiate_cb223d3fa84fc5d017h6e3701ac4f636293E",
    "__wamex__ZN6js_sys11WebAssembly1_86_$LT$impl$u20$wasm_bindgen..cast..JsCast$u20$for$u20$js_sys..WebAssembly..Instance$GT$10instanceof42__wbg_instanceof_Instance_4da4ddac4f174c0417h09fa0f411c536dbdE",
    "__wamex__ZN6js_sys11WebAssembly6Module15custom_sections37__wbg_customSections_bf03a28d320e398617h5fab2addd59eeb0eE",
    "__wamex__ZN6js_sys11WebAssembly6Module3new17h56055443bd158ea8E",
    "__wamex__ZN6js_sys5Array3get26__wbg_get_0c3cc364764a0b9817h8a220c3ad6d78e83E",
    "__wamex__ZN6js_sys5Array6length29__wbg_length_12246a78d2f65d3a17h917f6818d6b20892E",
    "__wamex__ZN6js_sys6Object3new26__wbg_new_67abf4a77618ee3e17h90c61ae10df5fb39E",
    "__wamex__ZN6js_sys7Reflect3set17hb7465981bc17ad4fE",
    "__wamex__ZN72_$LT$core..pin..Pin$LT$P$GT$$u20$as$u20$core..future..future..Future$GT$4poll17h2bd5ac9473590c38E",
    "__wamex__ZN79_$LT$wasm_bindgen_futures..JsFuture$u20$as$u20$core..future..future..Future$GT$4poll17h4438ecdf49ae5382E",
    "__wamex__ZN7example3sub16multiple_dyn_fns28_$u7b$$u7b$closure$u7d$$u7d$90__wasm_split_00multiple_dyn_fns00_import_d8b6697e7a618286107f21494e9611c7_multiple_dyn_fns17h98fe6b866383f6b7E",
    "__wamex__ZN7web_sys6window17h869557b445bb5304E",
    "__wamex__ZN7web_sys8features10gen_Window6Window18fetch_with_request28__wbg_fetch_d817b5362e58b61d17h189e61689db53e61E",
    "__wamex__ZN7web_sys8features11gen_Request7Request12new_with_str17h13d839890ebefcebE",
    "__wamex__ZN7web_sys8features12gen_Response1_98_$LT$impl$u20$wasm_bindgen..cast..JsCast$u20$for$u20$web_sys..features..gen_Response..Response$GT$10instanceof42__wbg_instanceof_Response_5b683150ad96eb7317h27f5aed49b9b64a7E",
    "__wamex__ZN7web_sys8features12gen_Response8Response12array_buffer17h0cd14cda9b79ca99E",
    "__wamex__ZN8dlmalloc8dlmalloc17Dlmalloc$LT$A$GT$6malloc17h2de685e1ffc8fe2eE",
    "__wamex__ZN93_$LT$wasm_bindgen_futures..JsFuture$u20$as$u20$core..convert..From$LT$js_sys..Promise$GT$$GT$4from17h8243c0199f050081E",
    "__wamex___wbindgen_object_clone_ref",
    "__wamex___wbindgen_object_drop_ref",
    "memory",
}
