crates/wamex-cli/tests/snapshots/snapshot__extended-example.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__wasm_split_00async_string00_import_421de7e11f9d255d1814d9d943bdf8d4_async_string",
    "__wasm_split_00dep_dyn00_import_fb0d4dcfe40b38e9fdde63174d7d7851_dep_dyn",
    "__wasm_split_00multiple_dyn_fns00_import_d8b6697e7a618286107f21494e9611c7_multiple_dyn_fns",
    "__wasm_split_00static_str00_import_63192d43e382025060e502134cbbee6a_static_str",
    "__wasm_split_00string_build_with_shared_const00_import_67350f8513bf297d8823c3cfcd3bbd87_string_build_with_shared_const",
    "__wasm_split_00string_from_static00_import_fafe41816eb813d80bacffbd9f40e1a6_string_build",
    "__wbg_arrayBuffer_b6fff4ef4ec59b14",
    "__wbg_buffer_ef9774282e5dab94",
    "__wbg_call_0ad083564791763a",
    "__wbg_call_a34b6b4765f27be0",
    "__wbg_customSections_bf03a28d320e3986",
    "__wbg_debug_f201c091a5d2019b",
    "__wbg_entries_83beb641792ccb9c",
    "__wbg_error_94252a8e90b35b8e",
    "__wbg_exports_f510e4afeb55b76a",
    "__wbg_fetch_d817b5362e58b61d",
    "__wbg_from_3aa0fcaa8eef0104",
    "__wbg_get_0c3cc364764a0b98",
    "__wbg_globalThis_6b4d52a0b6aaeaea",
    "__wbg_global_49324ce12193de77",
    "__wbg_grow_5be1165932613853",
    "__wbg_info_493696cc38ae1ad0",
    "__wbg_instanceof_Instance_4da4ddac4f174c04",
    "__wbg_instanceof_Response_5b683150ad96eb73",
    "__wbg_instanceof_Window_311934805c10047c",
    "__wbg_instantiate_cb223d3fa84fc5d0",
    "__wbg_length_12246a78d2f65d3a",
    "__wbg_length_c24da17096edfe57",
    "__wbg_length_c50d4b2a2cd38ed4",
    "__wbg_log_0051d9677940f06b",
    "__wbg_new_59845962d1127937",
    "__wbg_new_67abf4a77618ee3e",
    "__wbg_new_ac7361beaf933ba6",
    "__wbg_new_cb14c6d72298a8c8",
    "__wbg_newnoargs_a136448eeb7d48ac",
    "__wbg_newwithstr_53c38a275b729998",
    "__wbg_queueMicrotask_6808622725a52272",
    "__wbg_queueMicrotask_ef0e86b0263a71ee",
    "__wbg_resolve_267ff08e7e1d2ce4",
    "__wbg_self_cca3ca60d61220f4",
    "__wbg_set_1b50d2de855a9d50",
    "__wbg_set_5deee49b10b2b780",
    "__wbg_then_84907e7a6730461e",
    "__wbg_then_db12746ab6cec3f6",
    "__wbg_warn_4f29d3e20ba97cd0",
    "__wbg_wbindgencbdrop_eb10308566512b88",
    "__wbg_wbindgendebugstring_99ef257a3ddda34d",
    "__wbg_wbindgenexports_699c1a70f8b506ae",
    "__wbg_wbindgenfunctiontable_aa1084b2969a9cbe",
    "__wbg_wbindgenisfunction_8cee7dce3725ae74",
    "__wbg_wbindgenisundefined_c4b71d073b92f3c5",
    "__wbg_wbindgenjsvaleq_e6f2ad59ccae1b58",
    "__wbg_wbindgenmemory_d84da70f7c42d172",
    "__wbg_wbindgenthrow_451ec1a8469d7eb6",
    "__wbg_window_2aba046d3fc4ad7c",
    "__wbindgen_describe",
    "__wbindgen_describe_cast",
    "__wbindgen_externref_table_grow",
    "__wbindgen_externref_table_set_null",
    "__wbindgen_object_clone_ref",
    "__wbindgen_object_drop_ref",
}
