crates/wamex-cli/tests/snapshots/snapshot__multiple_dyn_fns.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "44594e20464e53",
    "",
    "",
]
