crates/wamex-cli/tests/snapshots/snapshot__multiple_dyn_fns.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__indirect_function_table",
    "__lib_base",
    "__stack_pointer",
    "__table_base",
    "__wamex__ZN4core5slice6memchr14memchr_aligned17h2da61a9a326c02b8E",
    "__wamex__ZN5alloc7raw_vec12handle_error17h3d3f256ad1600b52E",
    "__wamex__ZN5alloc7raw_vec20RawVecInner$LT$A$GT$10deallocate17h3013ed22802dc9d2E",
    "__wamex__ZN8dlmalloc8dlmalloc17Dlmalloc$LT$A$GT$6malloc17h2de685e1ffc8fe2eE",
    "memory",
}
