crates/wamex-cli/tests/snapshots/snapshot__static_str.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "",
    "",
    "",
]
